<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">
    <ImageView
        android:id="@+id/vehiclePhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="wrap"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/vehicle_image_desc" />

    <TextView
        android:id="@+id/yearMakeModelTrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_make_model_trim"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/vehiclePhoto"
        app:layout_constraintStart_toStartOf="@id/vehiclePhoto"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/priceMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_mileage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/yearMakeModelTrim"
        app:layout_constraintStart_toStartOf="@id/yearMakeModelTrim"/>

    <TextView
        android:id="@+id/vehicleInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/vehicle_info_label"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/priceMileage"
        app:layout_constraintStart_toStartOf="@id/yearMakeModelTrim"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vehicleBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:constraint_referenced_tags="vehicle_info"
        />
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/vehicleInfoLabel"
        android:text="@string/location"
        />
    <TextView
        android:id="@+id/locationText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/locationLabel"
        />
    <TextView
        android:id="@+id/extColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/locationLabel"
        android:text="@string/exterior_color_label"
        />
    <TextView
        android:id="@+id/extColorText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exterior_color_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/extColorLabel"
        />
    <TextView
        android:id="@+id/intColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/extColorLabel"
        android:text="@string/interior_color_label"
        />
    <TextView
        android:id="@+id/intColorText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interior_color_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/intColorLabel"
        />
    <TextView
        android:id="@+id/driveTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/intColorLabel"
        android:text="@string/drive_type_label"
        />
    <TextView
        android:id="@+id/driveTypeText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drive_type_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/driveTypeLabel"
        />
    <TextView
        android:id="@+id/transmissionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/driveTypeLabel"
        android:text="@string/transmission_label"
        />
    <TextView
        android:id="@+id/transmissionText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmission_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/transmissionLabel"
        />
    <TextView
        android:id="@+id/bodyStyleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/transmissionLabel"
        android:text="@string/body_style_label"
        />
    <TextView
        android:id="@+id/bodyStyleText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_style_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/bodyStyleLabel"
        />
    <TextView
        android:id="@+id/engineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/bodyStyleLabel"
        android:text="@string/engine_label"
        />
    <TextView
        android:id="@+id/engineText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engine_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/engineLabel"
        />
    <TextView
        android:id="@+id/fuelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vehicleInfoLabel"
        app:layout_constraintTop_toBottomOf="@id/engineLabel"
        android:text="@string/fuel_label"
        />
    <TextView
        android:id="@+id/fuelText"
        android:tag="vehicle_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_placeholder"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vehicleBarrier"
        app:layout_constraintTop_toTopOf="@id/fuelLabel"
        />

    <Button
        android:id="@+id/detailDealerButton"
        android:tag="vehicle_info"
        android:background="@color/lighter_blue"
        style="@style/CallDealerButtonInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>